--- a/Client/Pages/Home.razor
+++ b/Client/Pages/Home.razor
@@ -1,7 +1,8 @@
-﻿@page "/home"
+﻿@page "/"
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h2>ホームページ</h2>
+<h4>ようこそ</h4>
 
-Welcome to your new app.
+
