--- a/Client/Layout/NavMenu.razor
+++ b/Client/Layout/NavMenu.razor
@@ -15,7 +15,7 @@
             <h5 class="text-white ps-2">ページ一覧</h5>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="taskslist">
+            <NavLink class="nav-link" href="tasksmanagement">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> タスク一覧
             </NavLink>
         </div>
