--- a/Client/Pages/TaskManagement/Create.razor
+++ b/Client/Pages/TaskManagement/Create.razor
@@ -1,4 +1,4 @@
-﻿@page "/create"
+﻿@page "/tasksmanagement/create"
 @using Client.Services
 @inject NavigationManager Navigation
 @inject TaskService TaskService
