--- a/Client/Pages/TaskManagement/Edit.razor
+++ b/Client/Pages/TaskManagement/Edit.razor
@@ -1,4 +1,4 @@
-﻿@page "/edit/{id:int}"
+﻿@page "/tasksmanagement/edit/{id:int}"
 @using Client.Services
 @inject NavigationManager Navigation
 @inject TaskService TaskService
