--- a/Client/Pages/TaskManagement/TasksManagement.razor
+++ b/Client/Pages/TaskManagement/TasksManagement.razor
@@ -4,7 +4,7 @@
 <div class="container-fluid">
 <h3>タスク一覧</h3>
 
-<a href="/create" class="btn btn-success my-2">新しいタスクを追加</a>
+    <a href="/tasksmanagement/create" class="btn btn-success my-2">新しいタスクを追加</a>
 <table class="table table-bordered table-striped">
     <thead>
         <tr>
